# HitGuess

./: .gitignore  README.md  pyproject.toml
hitguess/: main.py  template.py
